[package]
name = "tokio-stdin"
version = "0.1.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1.1", features = [ "rt-multi-thread", "io-std", "io-util", "time", "macros" ] }
